--- a/package.json
+++ b/package.json
@@ -3,17 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1",
+    "@babel/runtime-corejs2": "^7.4.5",
     "axios": "^0.17.1",
     "fastclick": "^1.0.6",
     "immutable": "^3.8.2",
     "prop-types": "^15.6.0",
+    "react": "^16.8.6",
     "react-addons-css-transition-group": "^15.6.2",
+    "react-dom": "^16.8.6",
+    "react-hot-loader": "^4.6.3",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
-    "react-hot-loader": "^4.6.3",
+    "react-scripts": "3.0.1",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0"
   },
